@@ -7,6 +7,9 @@ partman-partitioning (65) UNRELEASED; urgency=low
     - Add ext4 support.
     - Honour partman/default_filesystem when creating new partitions.
       Requires partman-base 129.
+    - Cope with rounding errors while asking for the new partition size; if
+      the value we convert back from human-readable notation is in the
+      round-off range at either end, just use the appropriate extreme.
 
   [ Riku Voipio ]
   * Consolidate ARM partitioning.
